docusaurus.log
nohup: ignoring input

> my-website@0.0.0 start
> docusaurus start

[INFO] Starting the development server...
[SUCCESS] Docusaurus website is running at: http://localhost:3000/
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 6.01s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 1.30s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 1.73s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 1.06s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 984.27ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 970.60ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 1.15s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 975.83ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 844.99ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 495.61ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 734.77ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 470.34ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 799.30ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 628.88ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 860.03ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 963.30ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 634.38ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 1.69s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 2.52s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled with some errors in 1.21s
SyntaxError: /home/ubuntu/docusaurus/src/pages/manager.js: Unexpected token (205:34)
  203 |       <main className={styles.main}>
  204 |         <div style={{ display: 'flex', justifyContent: 'space-between', alignItems: 'center' }}>
> 205 |           <div style={{width: 100%}}>
      |                                   ^
  206 |             <h1 className={styles.heading}>Manager Dashboard</h1>
  207 |                         <h3 className={styles.subheading}>Welcome back, <span style={{color: '#10b981', fontSize: '30px'}}>{username}</span></h3>
  208 |
client (webpack 5.99.9) compiled with 1 error
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 3.11s
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 961.18ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 778.14ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 978.95ms
client (webpack 5.99.9) compiled successfully
[webpackbar] ℹ Compiling Client
[webpackbar] ✔ Client: Compiled successfully in 703.26ms
client (webpack 5.99.9) compiled successfully
